kubernetes/apps/network/traefik/internal/dashboard.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-int-dash-ingress
  namespace: network
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.${SECRET_DOMAIN}`) && (PathPrefix(`/api`))
      kind: Rule
      middlewares:
        - name: "network-chain-traefik-dash-no-auth@kubernetescrd"
          namespace: network
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    secretName: "${SECRET_DOMAIN/./-}-production-tls"
    certResolver: letsencrypt-production
