kubernetes/apps/network/traefik/internal/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: traefik-internal
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: traefik-internal-network
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: prometheus
            io.kubernetes.pod.namespace: observability
      toPorts:
        - ports:
            - port: "9100"
              protocol: TCP
    - fromCIDR:
        - 192.168.1.0/24
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
            - port: "8443"
              protocol: TCP
    - fromEntities:
        - cluster
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
            - port: "8443"
              protocol: TCP
  egress:
    - toCIDR:
        - 192.168.1.1/32
        - 192.168.1.2/32
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - toEntities:
        - cluster
        - kube-apiserver
